# Notepad

./: .gitignore  CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui  Notepad.cpp  Notepad.h  Notepad.ui  README.md  Setting.cpp  Setting.h  main.cpp  strings.cpp  strings.h
src/Dialog/: Dialog.cpp  Dialog.h  Dialog.ui
src/Notepad/: Notepad.cpp  Notepad.h  Notepad.ui
src/Setting/: Setting.cpp  Setting.h  Setting.ui
src/Strings/: Strings.cpp  Strings.h
src/main/: main.cpp
